fixing styling so it is more readable also in dark mode

--- a/app/(auth)/login/BlogSection.module.scss
+++ b/app/(auth)/login/BlogSection.module.scss
@@ -102,6 +102,7 @@ $background-color: #3c4855;
       .imageContainer {
         width: 100%;
         height: auto;
+        aspect-ratio: 16 / 10;
       }
 
       .blogTitle {
